improve TrainerPokemon copy constructor usage